--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   color-scheme: light dark;
   /* color: rgba(255, 255, 255, 0.87); */
   background-color: rgb(252, 246, 235);
+  color: rgb(119, 0, 0);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
